[package]
name = "kv"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
image = { version = "0.25", features = ["default"] }
bat = { version = "0.26.1", default-features = false, features = [
    "regex-onig",
] }
flate2 = "1.1"
base64 = "0.22"
crossterm = "0.29"
directories = "6.0.0"
anyhow = "1.0"
atty = "0.2"
tempfile = "3.24.0"
rayon = "1.11"
serde = { version = "1.0", features = ["derive"] }
toml = "1.0"
shell-words = "1.1"

# svg
resvg = { version = "0.46", optional = true }
usvg = { version = "0.46", optional = true }
tiny-skia = { version = "0.11", optional = true }
# pdf
pdfium-render = { version = "0.8", optional = true }
# html
headless_chrome = { version = "1.0", features = ["fetch"], optional = true }
# office
sha2 = { version = "0.10.9", optional = true }
hex = { version = "0.4", optional = true }

[features]
svg = ["dep:resvg", "dep:usvg", "dep:tiny-skia"]
pdf = ["dep:pdfium-render"]
html = ["dep:headless_chrome"]
office = ["dep:sha2", "pdf", "dep:hex"]

default = ["svg", "pdf", "html", "office"]

[dev-dependencies]
rstest = "0.26.1"

[profile.release]
codegen-units = 1
debug = false
lto = "fat"
